
package Db.Proto;
option optimize_for = LITE_RUNTIME;

enum Actions {
	kActNone = 0;
	kActInsert = 1;
	kActUpdate = 2;
}

message Update {
	optional Actions action = 1;
	optional int64 id = 2;
	optional int32 storage_idx = 3;
	optional string storage_name = 4;
	optional bytes buffer = 17;
}

message Query {
	optional string view_name = 2;
	repeated bytes keys = 3;
	optional bytes from_key = 4;
	optional bytes to_key = 5;
	optional uint32 limit = 6;
}

message Rows {
	repeated bytes data = 1;
}

message Fetch {
	enum Type {
		kNone = 0;
		kDocument = 1;
	};
	optional Type type = 1;
	optional int64 id = 2;
	optional int32 storage_idx = 3;
	optional string storage_name = 4;
}
message FetchData {
	optional int64 id = 1;
	optional bytes buffer = 2;
}

message WriteAhead {
	enum Type {
		kNone = 0;
		kUpdate = 1;
		kCommit = 2;
		kRollback = 3;
	}

	optional int64 sequence = 1;
	optional int64 updateId = 2;
	optional Update updateBody = 3;
}

